--- a/assembly.qmd
+++ b/assembly.qmd
@@ -10,26 +10,28 @@ if [[ $COUNT -gt 0 ]]
 then
     spades.py -t {threads} \
     --meta \
-    -o {params.spades_folder} \
+    -o {output} \
     -1 {input.R1} \
     -2 {input.R2} \
     -s {input.S} > {log} 2>&1
 else
     spades.py -t {threads} \
     --meta \
-    -o {params.spades_folder} \
+    -o {output} \
     -1 {input.R1} \
     -2 {input.R2} > {log} 2>&1
 fi    
 ```
 
+The `if [[ $COUNT -gt 0 ]]` condition checks if singleton reads are present. If so, we will include them with the -s option in the spades.py command
+
 -   `{input.R1}`, `{input.R2}` and `{input.S}` are host-filtered FASTQ files (R1, R2, and S) from **step 2.3**.
--   `{params.spades_folder}` defines the directory where the assembly results will be stored.
+-   `{output}` defines the directory where the assembly results will be stored.
 -   `{log}` specifies the log directory.
 
-Next we will combine all contigs into a single fasta file so we can perform taxonomic annotation across all samples in one go. Before performing this step, we will add sample names to the beginning of each contig name. This will allow us to split annotation files back into individual annotation files for each sample.
-
 ## Renaming contigs:
+
+We will add sample names to the beginning of each contig name. This will make sure that each sample's contig names are unique before we start aggregating contigs. 
 
 ``` bash
 seqkit replace -p "^" -r "{sample}_" {input} > {output}
@@ -41,6 +43,8 @@ seqkit replace -p "^" -r "{sample}_" {input} > {output}
 
 ## Aggregating contigs:
 
+Next we will combine all renamed contigs into a single fasta file so we can perform taxonomic annotation across all samples in one go.
+
 ``` bash
 cat {input} > {output}
 ```
@@ -51,4 +55,3 @@ cat {input} > {output}
 ::: callout-note
 We have created contigs that are ready for taxonomic annotation in the next chapter.
 :::
-
