--- a/illumina_hpc.qmd
+++ b/illumina_hpc.qmd
@@ -1,44 +1,34 @@
 # Automating data analysis
 
+In the previous chapters, you learned how to perform each step of the metagenomic data analysis pipeline manually. While this is a valuable learning experience, it's not practical for analyzing large datasets or for ensuring reproducibility in the long term.
+
+We can make use of a tool called [Snakemake](https://snakemake.readthedocs.io/en/stable/) to automate the previous steps into a single pipeline. With Snakemake, you can define the steps of your analysis in a `Snakefile` and then let Snakemake handle the execution, dependency management, and error handling.
+
 ## Preparing to run the workflow.
 
-We can make use of a tool called [Snakemake](https://snakemake.readthedocs.io/en/stable/) to automate the previous steps into a single pipeline. To set this up, you must create a tabular config file, which contains ...
+To run the automated workflow, you'll need to make sure that your project directory is set up correctly and that you have the necessary Conda environment activated.
 
-The tabular config file has the following structure:
-
-\[insert tabular example file\]
-
-Next, we need to create a place for your results to be stored. First check your current directory with the `pwd` command:
+In the command line, navigate to your project directory. First check your current directory with the pwd command:
 
 ``` bash
 pwd
 ```
 
-Change your current directory using `cd` if needed:
+Change your current directory using cd if needed:
 
 ``` bash
-cd /{folder1}/{folder2}
+cd /{folder1}/{folder2} # Replace with the actual path to your project directory
 ```
 
-Then create the new directory using the `mkdir` command:
+Next, run the `ls` command to list the files in the current directory and check if the `illumina_snakemake.smk` file is present. This is the "recipe" for the workflow, describing all the steps we have done by hand, and it is most commonly placed in the root directory of your project (you can open the `.smk` file with a text editor and have a look).
+
+Make sure that we have activated the appropriate conda environment and check if the command line has `(stable_env_1)` in front.
 
 ``` bash
-mkdir results
+conda activate stable_env_1 # Replace environment name is needed
 ```
 
-This creates a new directory at the current location. Move the `sample_config.tsv` file to the results directory using the `mv` (move) command:
-
-``` bash
-mv sample_config.tsv results
-```
-
-::: callout-tip
-If you get a "file not found" error after changing your directory (`cd`) you may need to write the complete path of your sample_config.tsv file e.g `mv /home/username/Documents/sample_config.tsv results`
-:::
-
-After preparing the results directory we have to make sure that we have activated the appropriate conda environment and check if the command line has `(your_environment_name)` in front.
-
-Next, run the `ls` command to list the files in the current directory and check if the `InsertCorrectName.smk` file is present. This is the "recipe" for the workflow, describing all the steps we have done by hand. (you can open the `.smk` file with a text editor and have a look).
+Lastly, check the `raw_data` directory. Make sure that you have a `raw_data/` directory in your project folder and that it contains your gzipped FASTQ files (e.g., `sample1_R1_001.fastq.gz`, `sample1_R2_001.fastq.gz`, etc).
 
 ## Running the workflow
 
@@ -47,14 +37,10 @@ After setting everything up, we can redo the analysis for all samples in a singl
 ``` bash
 snakemake \
 --snakefile \
-InsertCorrectName.smk \
---directory {ourdir} \
---configfile sample_config={config} \
---cores {threads}
+illumina_snakemake.smk \
+--use-conda \
+--cores {threads} \
 --dryrun
 ```
-
-- `{ourdir}` is the directly we created. 
-- `{config}` is the tabular config file.
 
 If no errors appear, then remove the `--dryrun` argument and run it again to fully execute the workflow.
